2010-06-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c (RegisterMATImage): More accurately describe MATLAB
	format support as "MATLAB Level 5".

	* magick/magic.c (StaticMagic): Automatically detect MATLAB Level
	5 format based on file header.

	* PerlMagick/PerlMagickCheck.sh.in: Run PerlMagick tests in
	verbose mode so that all test output appears in "test-suite.log"
	if there is a failure.

	* coders/Makefile.am (coders_mat_la_LIBADD): MAT coder is
	optionally dependent on zlib so zlib should be listed as a
	dependency.

	* magick/blob.c (BlobToFile): MAGICK_IO_FSYNC=TRUE in the
	environment should cause file data to be explicitly synchronized
	prior to close.

2010-06-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/installer/inc/files-documentation.isx: There are
	not currently any JPEG files in the www/images directory to
	distribute.

2010-06-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* ltdl/config/ltmain.sh: Update libtool to 2.2.10.

	* magick/profile.c: Support lcms 2.0.

	* configure.ac: Add support for configuring for lcms 2.0,
	controlled via a new --without-lcms2 option.  By default lcms v2
	is used if it is available, otherwise v1.1X is used if it is
	available.

2010-06-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* ltdl/config/ltmain.sh: Update libtool to 2.2.8.

2010-06-02  Glenn Randers-Pehrson  <glennrp@simple...>

	* coders/png.c correctly scale bKGD chunk data in Q16 build

2010-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Magick++/Image.rst: Fix documentation error which wrongly
	recommended multiplication by size of PixelPacket.  Correction by
	Roel Baardman.

2010-05-23 Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/txt.c (ReadTXTImage): Ability to read multiple images.

2010-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (DispatchImage): 'K' channel was always
	output as black for "CMYK" specification unless image matte flag