@@ -24,6 +24,10 @@
 2010-06-25  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/blob.c (BlobToImage): If a temporary file must be used
+        and the user has specified magic, then preserve the magic
+        specifier when reading the temporary file.
+
   <LI> coders/mat.c (RegisterMATImage): More accurately describe MATLAB
         format support as "MATLAB Level 5".
 
